--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,7 +35,7 @@ spring:
         format_sql: true                # 로그, 콘솔의 SQL을 좀 더 이쁘게 출력합니다.
         show_sql: true                  # System.out 으로 출력
         use_sql_comments: true          # 보다 쉬운 디버깅을 위해 SQL 내부에 /* */의 주석을 추가합니다.
-        generate_statistics: true       # 통계 정보를 생성할지 여부
+        #generate_statistics: true       # 통계 정보를 생성할지 여부
         jdbc:
           batch_size: 1000  # saveAll batch Insert and Update Option
 
