--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
   datasource:
     hikari:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://localhost:3306/rorent?serverTimezone=UTC&characterEncoding=UTF-8
-      username: root
+      jdbc-url: jdbc:mysql://192.168.25.237:3306/rorent?serverTimezone=UTC&characterEncoding=UTF-8
+      username: testUser
       password: abcd123!      #대문자, 소문자, 숫자, 특수문자를 모두 포함해서 8자 이상의 길이로 설정필요
       maximum-pool-size: 3
       pool-name: Hikari Connection Pool
