log4j 설정, Member - Mongo Db 연결

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,14 @@
 			<version>${querydsl.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.bgee.log4jdbc-log4j2</groupId>
+			<artifactId>log4jdbc-log4j2-jdbc4</artifactId>
+			<version>1.16</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
