--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
     active: local
   datasource:
     hikari:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://192.168.25.237:3306/rorent?serverTimezone=UTC&characterEncoding=UTF-8
+      driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+      jdbc-url: jdbc:log4jdbc:mysql://192.168.25.237:3306/rorent?serverTimezone=UTC&characterEncoding=UTF-8
       username: testUser
       password: abcd123!      #대문자, 소문자, 숫자, 특수문자를 모두 포함해서 8자 이상의 길이로 설정필요
       maximum-pool-size: 3
@@ -33,15 +33,12 @@ spring:
     properties:                         # Additional native properties to set on the JPA provider.
       hibernate:
         format_sql: true                # 로그, 콘솔의 SQL을 좀 더 이쁘게 출력합니다.
-        show_sql: true                  # System.out 으로 출력
+        #show_sql: true                  # System.out 으로 출력
         use_sql_comments: true          # 보다 쉬운 디버깅을 위해 SQL 내부에 /* */의 주석을 추가합니다.
         #generate_statistics: true       # 통계 정보를 생성할지 여부
         jdbc:
           batch_size: 1000  # saveAll batch Insert and Update Option
 
-logging:
-  level:                                      # 각 package 별로 로깅 레벨을 지정할 수 있다.
-    org.hibernate.type: trace                 # 콘솔차에 조건에 바인딩되는 값 및 조회 결과 출력
-    org.hibernate.sql: debug                  # logger를 통해 하이버네이트 실행 SQL
-    org.hibernate.type.descriptor.sql: trace  # sql의 ? 값을 Parameter로 보여줌.
-    com.zaxxer.hikari.pool: debug
+
+
+
