--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,6 +39,8 @@ spring:
         jdbc:
           batch_size: 1000  # saveAll batch Insert and Update Option
 
+logging:
+  config: classpath:log.xml
 
 
 
